--- a/vignettes/model_details.Rmd
+++ b/vignettes/model_details.Rmd
@@ -56,7 +56,8 @@ eq_clean_data<-function(filename) {
                                              ifelse(nchar(YEAR)==3,paste0("0",YEAR),YEAR)))) %>%
                 tidyr::unite(DATETIME, NEWYEAR, MONTH, DAY) %>%
                 dplyr::mutate(DATETIME = lubridate::ymd(DATETIME)) %>%
-                dplyr::mutate(LATITUDE = as.numeric(LATITUDE),LONGITUDE = as.numeric(LONGITUDE))
+                dplyr::mutate(LATITUDE = as.numeric(LATITUDE),LONGITUDE = as.numeric(LONGITUDE)) %>%
+                dplyr::mutate(YEAR = as.numeric(YEAR))
         EarthquakeData
 }
 ```
@@ -91,7 +92,7 @@ eq_location_clean<-function(EarthquakeData) {
 }
 ```
 
-```{r generate filename}
+```{r clean location column}
 eq_clean_data("signif.txt") %>% eq_location_clean() %>% select(DATETIME,EQ_PRIMARY,LOCATION_NAME) %>% tail()
 ```
 
@@ -108,7 +109,9 @@ In the example, the function plots a time line with all earthquakes since year 2
 ```{r geom_timeline code, echo = FALSE}
 GeomTimeline<- ggplot2::ggproto("GeomTimeline", Geom,
                           required_aes = "x",
-                          default_aes = ggplot2::aes(y=0.1,fill = "blue",size=0.01,alpha=0.7),
+                          default_aes = ggplot2::aes(y=0.1,fill = "blue",colour="blue",
+                                                     size=0.01,alpha=0.7,stroke = 0.5,
+                                                     shape = 21),
                           draw_key = ggplot2::draw_key_point,
                           draw_panel = function(data, panel_scales, coord) {
 
@@ -118,21 +121,24 @@ GeomTimeline<- ggplot2::ggproto("GeomTimeline", Geom,
                  dplyr::filter(!is.na(x)) %>%
                  dplyr::filter(!is.na(fill)) %>%
                  dplyr::filter(!is.na(size)) %>%
-                 dplyr::mutate(size=size/100) 
+                 dplyr::mutate(size=size/100)
 
            xmin<-min(mydata$x)
-           xmax<-max(mydata$x)   
+           xmax<-max(mydata$x)
            panel_scales$x.range<-c(xmin,xmax)
 
-                 
-           coords <- coord$transform(mydata, panel_scales) 
-           
+
+           coords <- coord$transform(mydata, panel_scales)
 
            grid::pointsGrob(
                    x = grid::unit(coords$x,"native"),
                    y = grid::unit(coords$y,"native"),
+                   pch = coords$shape,
                    size = grid::unit(coords$size,"native"),
-                   gp = grid::gpar(fill=coords$fill,alpha=coords$alpha,col=coords$fill)
+                   gp = grid::gpar(
+                           col = coords$colour,
+                           alpha=coords$alpha,
+                           fill = coords$fill)
                    )
                           }
 )
