Debugging mapping functions and updating documentation

--- a/vignettes/model_details.Rmd
+++ b/vignettes/model_details.Rmd
@@ -249,10 +249,14 @@ Here, the function creates a leaflet interactive map showing the epicenter of th
 
 ```{r eq_map code, echo = FALSE}
 eq_map<-function(dataframe,annot_col){
-        mydataframe<-dataframe[,c("LATITUDE","LONGITUDE","EQ_PRIMARY",annot_col)]
         leaflet::leaflet() %>%
         leaflet::addTiles() %>%
-        leaflet::addCircleMarkers(data = mydataframe, radius = ~ ifelse(!is.na(EQ_PRIMARY),EQ_PRIMARY,2),lng = ~ LONGITUDE, lat = ~ LATITUDE, popup = ~ mydataframe[,annot_col])
+        leaflet::addCircleMarkers(
+                data = dataframe,
+                radius = ~ ifelse(!is.na(EQ_PRIMARY),EQ_PRIMARY,2),
+                lng = ~ LONGITUDE,
+                lat = ~ LATITUDE,
+                popup = ~ dataframe[[annot_col]])
 }
 ```
 
